[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgu-rpc-sdk"
version = "0.1.0"
description = "TGU RPC SDK - 서비스/API 명세 기반 RPC 클라이언트"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "DongEunKim"}]
keywords = ["tgu", "rpc", "mqtt", "telematics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "wss-mqtt-client>=0.1.0",
]

[project.urls]
Repository = "https://github.com/DongEunKim/MQTT-WSS-API"

[tool.setuptools.packages.find]
where = ["."]
include = ["tgu_rpc*"]
