[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wss-mqtt-client"
version = "0.1.0"
description = "WSS-MQTT API 클라이언트 SDK - TGU/MQTT 통신 추상화"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "DongEunKim"}]
keywords = ["wss", "mqtt", "websocket", "tgu", "messaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "websockets>=12.0",
    "paho-mqtt>=2.0.0",
]

[project.optional-dependencies]
msgpack = ["msgpack>=1.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Repository = "https://github.com/DongEunKim/MQTT-WSS-API"

[tool.setuptools.packages.find]
where = ["."]
include = ["wss_mqtt_client*"]
