[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maas-rpc-client-sdk"
version = "0.1.0"
description = "MaaS RPC Client SDK - Machine as a Service RPC 클라이언트"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "DongEunKim"}]
keywords = ["maas", "rpc", "mqtt", "edge", "iot", "machine-as-a-service"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "wss-mqtt-client>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Repository = "https://github.com/DongEunKim/MQTT-WSS-API"

[tool.setuptools.packages.find]
where = ["."]
include = ["maas_rpc_client*"]
